# qrSVG

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.ps1  setup.sh  tox.ini
examples/: url.py  vcard.py
script/: run_examples.py
src/qrSVG/: __main__.py  cli.py  containers.py  diff.py  image.py  qr.py  validate.py  vcard.py
test/: test_examples.py
